css/theme.css
/*-------------------------------------------------------------
[Master Stylesheet]

Project: Cherga HTML
[Table of contents]
1.  General
2.  Forms and Inputs
3.  Custom Select
4.  Contact Forms
5.  OWL Carousel
6.  Slick Slider
7.  Header
8.  Content
9.  Footer
10. Preloader
11. Typography
12. Sidebar and Footer Widgets
	12.1  About Widget
	12.2  Search Widget
	12.3  Menus & Lists Widgets
	12.4  Featured Posts Widget
	12.5  Tag Cloud Widget
	12.6  Banner Widget
	12.7  Flickr Widget
	12.8  Mailchimp Widget
	12.9  Calendar Widget
	12.10 Widget RSS
	12.11 Quick Contact Widget
	12.12 Price Filter Widget
13. Blog Listing
14. Single Post
15. Shop Page
16. Single Product Page
17. Cart
18. Checkout
19. Content Widgets
	19.1  Button Widget
	19.2  Person Widget
	19.3  Price Table Widget
	19.4  Itemized Link Widget
	19.5  Testimonials Widget
	19.6  Image Slider Widget
	19.7  Split Slider Widget
	19.8  Grid Gallery Widget
	19.9  Proofing Grid Widget
	19.10 Packery Gallery Widget
	19.11 Albums Gallery Widget
	19.12 Tabs Widget
	19.13 Counter Widget
	19.14 Media Slider Widget
	19.15 Kenburns Slider Widget
	19.16 Ribbon Slider Widget
	19.17 Before/After Widget
	19.18 Heading Widget
	19.19 Icon Widget
	19.20 Additional Widgets
20. Coming Soon Page
21. Centered Page
22. Padding and Margin
23. Color Settings
24. Custom Classes
25. Responsive

-------------------------------------------------------------*/

/* ----------------------------- */
/* ---------- General ---------- */
/* ----------------------------- */
.cherga_site_wrapper  {
	transition: opacity 500ms;
}
.fadeOnLoad {
	opacity: 0;
}
.clear {
	clear: both;
}
.cherga_header_menu_part nav,
.cherga_header_menu_part ul,
.cherga_header_menu_part li,
.cherga_header_menu_part a,
.cherga_no_select {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

html {
	height: auto;
	overflow-x: hidden;
	position: static;
}

body {
	position: relative;
	margin: 0;
	padding: 0;
	background: #171717;
	font-family: "Roboto", sans-serif;
	font-size: 16px;
	line-height: 26px;
	font-weight: 400;
	color: #a0a7ae;
}

a {
	text-decoration: none;
	outline: none;
	display: inline-block;
	transition: all .3s;
	-webkit-transition: all .3s;
}

p {
	font-size: 16px;
	line-height: 26px;
	font-weight: 400;
	margin-bottom: 14px;
}

.cherga_content a:hover,
.cherga_content a:focus {
	text-decoration: none;
}

.cherga_pswp_video_wrapper {
	position: absolute;
	left: 50%;
	top: 50%;
	transform: translate(-50%,-50%);
}
.cherga_pswp_video_wrapper iframe {
	display: block;
	width: 100%;
	height: 100%;
}

.cherga_back_to_top {
	bottom: 50px;
	right: 50px;
	opacity: 0;
	pointer-events: none;
	cursor: pointer;
	display: block;
	height: 60px;
	position: fixed;
	transition: opacity 0.3s ease-out 0s, background 400ms, border 400ms;
	width: 60px;
	z-index: 9999;
	box-sizing:border-box;
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	border:2px solid #ffffff;
	background:#3a3e43;
}
.cherga_back_to_top:after {
	color: #ffffff;
	content:'\f106';
	display: block;
	font-family: 'FontAwesome';
	font-size: 40px;
	height: 40px;
	left: 0;
	line-height: 40px;
	margin-top: -22px;
	position: absolute;
	text-align: center;
	top: 50%;
	width: 100%;
}
.cherga_back_to_top.cherga_show_me {
	pointer-events: auto;
	opacity:1;
}

.cherga_line_height_0 {
	line-height: 0;
}

.cherga_bg_top_left {
	background-position: top left;
}

.cherga_bg_top_center {
	background-position: top center;
}

.cherga_bg_top_right {
	background-position: top right;
}

.cherga_bg_center_left {
	background-position: center left;
}

.cherga_bg_center_center {
	background-position: center center;
}

.cherga_bg_center_right {
	background-position: center right;
}

.cherga_bg_bottom_left {
	background-position: bottom left;
}

.cherga_bg_bottom_center {
	background-position: bottom center;
}

.cherga_bg_bottom_right {
	background-position: bottom right;
}

.cherga_bg_size_cover {
	background-size: cover;
}

.parallax {
	background-attachment: fixed;
}

img {
	max-width: 100%;
	height: auto;
}

table {
	width: 100%;
	border-collapse: collapse;
	margin-bottom: 40px;
}

table td, table th {
	text-align: center;
	padding: 7px 0;
	border: 1px solid #e1e1e1;
}
body table th {
	vertical-align: middle;
}

dt {
	font-weight: bold;
	text-decoration: underline;
}

dd {
	margin: 0;
	padding: 0 0 0.5em 0;
}

pre {
	display: block;
	white-space: pre-wrap;
	margin: 0;
	word-break: break-all;
	word-wrap: break-word;
	max-width: 100%;
}

iframe {
	display: block;
	max-width: 100%;
	max-height: 100%;
}

/* -------------------------------------- */
/* ---------- Forms and Inputs ---------- */
/* -------------------------------------- */
form {
	margin: 0;
}

.cherga_button,
.cherga_widget_button a.cherga-button,
input[type="button"],
input[type="reset"],
input[type="submit"],
input[type="radio"],
input[type="checkbox"] {
	cursor: pointer;
	outline: none;
}

body input[type="text"],
body input[type="password"],
body input[type="email"],
body input[type="tel"],
body input[type="date"],
body input[type="time"],
body input[type="datetime"],
body input[type="url"],
body select,
body textarea {
	vertical-align: top;
	padding: 14px 19px 16px 19px;
	background: transparent;
	border: none;
	border-radius: 0;
	width: 100%;
	font-size: 13px;
	line-height: 20px;
	height: 50px;
	margin-bottom: 10px;
	letter-spacing: 0.7px;
	transition: border 250ms;
	box-sizing: border-box;
	-webkit-box-sizing: border-box;
	-moz-box-sizing: border-box;
}
body textarea:active,
body textarea:focus {
	background: transparent;
}
body input[type="password"] {
	border-bottom: solid 1px rgba(255, 255, 255, .1);
}

body textarea {
	height: 150px;
	resize: none;
	padding: 14px 19px 16px 19px;
}

body select,
body select:focus {
	position: relative;
	border-radius: 0;
	outline: none!important;
	background: transparent;
}
/* ... */

